# EndToEnd_Haystack_FastAPI

./: README.md  app.py  pyproject.toml  requirements.txt
QA_System/: ingestion.py  retrieval_generation.py  utils.py
endtoend_haystack_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: index.html
